--- a/package.json
+++ b/package.json
@@ -7,9 +7,17 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "core-js": "^3.6.5",
+    "axios": "^0.21.1",
+    "bright-comment": "^1.5.7",
+    "core-js": "^3.6.4",
+    "element-ui": "^2.15.1",
+    "fetch-jsonp": "^1.1.3",
+    "github-markdown-css": "^4.0.0",
+    "markdown-it": "^12.0.6",
+    "mavon-editor": "^2.9.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vuejs-emoji": "^0.1.8",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
